# eval-forge

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
api/: database.py  main.py  metrics.py  models.py  schemas.py
api/routes/: compare.py  evaluations.py  health.py  policies.py
api/services/: orchestrator.py  queue.py
cli/: evalforge.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/pages/: Compare.tsx  RunDetail.tsx  RunsList.tsx
examples/: heuristic_policy.py  random_policy.py
infra/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.nginx  Dockerfile.worker
infra/k8s/: api-deployment.yaml  dashboard-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  worker-job-template.yaml
infra/k8s/grafana/: dashboard-provider.yaml  dashboards.json  datasource-config.yaml  grafana-deployment.yaml
infra/k8s/prometheus/: prometheus-config.yaml  prometheus-deployment.yaml
infra/nginx/: nginx.conf
scripts/: k8s_setup.sh  smoke_test.py
tests/: conftest.py  test_api.py
worker/: metrics.py  reporting.py  runner.py
worker/environments/: __init__.py  base.py  cluttered.py  pick_place.py  reach.py
worker/policies/: random_policy.py
