[project]
name = "evalforge"
version = "0.1.0"
description = "Self-hosted robot policy evaluation platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
worker = [
    "pybullet>=3.2.6",
    "numpy>=1.26.0",
    "psutil>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
]

[project.scripts]
evalforge = "cli.evalforge:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "worker", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
